# sec-quest

./: .dockerignore  .gitignore  Dockerfile  LICENSE  LICENSE.md  README.md  __init__.py  inference.py  models.py  openenv.yaml  pyproject.toml  validate-windows.ps1
.ai/: rules.md
server/: __init__.py  app.py  environment.py  grader.py  tasks.py
sexcs/: .dockerignore  .gitignore  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
sexcs/server/: Dockerfile  __init__.py  app.py  environment.py  grader.py  requirements.txt  sexcs_environment.py
